Update to 1.21, first somewhat working version